# kuka_lab_setup

./: CMakeLists.txt  README.md  kuka_lab_setup.rosinstall  package.xml
config/: zero_state_robotiq.rviz
launch/: load_kukalabsetup.launch  test_kukalabsetup.launch
meshes/: holes.dae
urdf/: labsetup.xacro  labsetup_macro.xacro
